tests/fixtures/invalid/max_float_set.py
# Cannot call max() with Float, Set[int]
x = max(1.0, {1, 2, 3})
